# ontologica

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  ontologica.pest  ontology.rs  test.onl
